[package]
name          = "nash-ws"
version       = "0.1.3"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
license       = "Apache-2.0"
description   = "nash-ws is a web and native stream based WebSocket client"
readme        = "README.md"
documentation = "https://docs.rs/nash-ws"
repository    = "https://github.com/nash-io/nash-ws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0.1", features = ["full"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
futures-util = "0.3.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
async-channel = "1.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.46"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "CloseEvent",
    "ProgressEvent",
    "WebSocket",
]

[dev-dependencies]
cross-test = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.20"
